k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-app
  labels:
    app.kubernetes.io/name: banking-online
    app.kubernetes.io/part-of: dtb-banking-platform
